; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_genrsa.c_genrsa_cb.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_genrsa.c_genrsa_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@verbose = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @genrsa_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @genrsa_cb(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8, align 1
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i8 42, i8* %8, align 1
  %9 = load i32, i32* @verbose, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %35

12:                                               ; preds = %3
  %13 = load i32, i32* %5, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i8 46, i8* %8, align 1
  br label %16

16:                                               ; preds = %15, %12
  %17 = load i32, i32* %5, align 4
  %18 = icmp eq i32 %17, 1
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i8 43, i8* %8, align 1
  br label %20

20:                                               ; preds = %19, %16
  %21 = load i32, i32* %5, align 4
  %22 = icmp eq i32 %21, 2
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i8 42, i8* %8, align 1
  br label %24

24:                                               ; preds = %23, %20
  %25 = load i32, i32* %5, align 4
  %26 = icmp eq i32 %25, 3
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  store i8 10, i8* %8, align 1
  br label %28

28:                                               ; preds = %27, %24
  %29 = load i32*, i32** %7, align 8
  %30 = call i32 @BN_GENCB_get_arg(i32* %29)
  %31 = call i32 @BIO_write(i32 %30, i8* %8, i32 1)
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @BN_GENCB_get_arg(i32* %32)
  %34 = call i32 @BIO_flush(i32 %33)
  store i32 1, i32* %4, align 4
  br label %35

35:                                               ; preds = %28, %11
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @BIO_write(i32, i8*, i32) #1

declare dso_local i32 @BN_GENCB_get_arg(i32*) #1

declare dso_local i32 @BIO_flush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
